samples/_failures_safe/1761511826_a3ab7a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_be67b8b2.c: In function ‘tokenize’:
./samples/SAFE/__tmp_be67b8b2.c:165:13: error: expected declaration or statement at end of input
  165 |             column++;
      |             ^~~~~~
./samples/SAFE/__tmp_be67b8b2.c:165:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_be67b8b2.c:165:13: error: expected declaration or statement at end of input
